RESOLVED FIXED308261
Page may be missing scroll stretch for single frame during rubber band restoration
https://bugs.webkit.org/show_bug.cgi?id=308261
Summary Page may be missing scroll stretch for single frame during rubber band restor...
Lily Spiniolas
Reported 2026-02-19 17:13:55 PST
Attachments
Lily Spiniolas
Comment 1 2026-02-19 17:21:47 PST
EWS
Comment 2 2026-02-20 01:15:05 PST
Committed 307896@main (f520451a9777): <https://commits.webkit.org/307896@main> Reviewed commits have been landed. Closing PR #59044 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.