Page may be missing scroll stretch for single frame during rubber band restoration https://bugs.webkit.org/show_bug.cgi?id=308261 rdar://170522200

Reviewed by Abrar Rahman Protyasha and Simon Fraser.

Immediately service the rubber banding animation after starting
it to ensure the correct scroll position is immediately set.

* Source/WebCore/platform/mac/ScrollingEffectsController.mm:
(WebCore::ScrollingEffectsController::restoreRubberbandingState):

Canonical link: https://commits.webkit.org/307896@main